# AndroidOpenGLESDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/codesdancing/android/opengles/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opengl_jni.cpp
app/src/main/java/com/codesdancing/android/opengles/: CoordinateRenderer.java  Geometry.java  MainActivity.kt  TestRenderer.java
app/src/main/java/com/codesdancing/android/opengles/other/: Constant.java
app/src/main/java/com/codesdancing/android/opengles/other/model/: MenuBean.java  MenuItemBean.java
app/src/main/java/com/codesdancing/android/opengles/other/model/model/: MtlBean.java  ObjectBean.java
app/src/main/java/com/codesdancing/android/opengles/other/renderer/: BaseRenderer.java
app/src/main/java/com/codesdancing/android/opengles/other/renderer/light/: LightCastersDirectionalRenderer.java  (+7 more)
app/src/main/java/com/codesdancing/android/opengles/other/utils/: DisplayUtil.java  JniRendererUtil.java  LogUtil.java  MultiEGLUtils.java  OpenGLUtil.java
app/src/main/java/com/codesdancing/android/opengles/other/view/: BaseChangeFragment.java  BaseGLView.java  BaseTypeGLView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: simple_fragment_shader.glsl  simple_vertex_shader.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/codesdancing/android/opengles/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+61 files in other folders)
